Anvil Recipe is Problem

--- a/src/main/resources/assets/ferratinium/lang/en_us.json
+++ b/src/main/resources/assets/ferratinium/lang/en_us.json
@@ -1,5 +1,8 @@
 {
 	"item.ferratinium.ferronyx": "Ferronyx",
+	"item.ferratinium.energized_ferronyx": "Energized Ferronyx",
+	"item.ferratinium.energized_ferronyx_ingot": "Energized Ferronyx Ingot",
+	"item.ferratinium.energized_ferronyx_powder": "Energized Ferronyx Powder",
 	"item.ferratinium.raw_platiniam": "Raw Platiniam",
 	"item.ferratinium.platiniam_ingot": "Platiniam Ingot",
 
