Added Ertech's features!

--- a/src/main/resources/assets/ferratinium/lang/en_us.json
+++ b/src/main/resources/assets/ferratinium/lang/en_us.json
@@ -3,20 +3,29 @@
 	"item.ferratinium.energized_ferronyx": "Energized Ferronyx",
 	"item.ferratinium.energized_ferronyx_ingot": "Energized Ferronyx Ingot",
 	"item.ferratinium.energized_ferronyx_powder": "Energized Ferronyx Powder",
-	"item.ferratinium.raw_platiniam": "Raw Platiniam",
-	"item.ferratinium.platiniam_ingot": "Platiniam Ingot",
-
 	"item.ferratinium.ferronyx_sword": "Ferronyx Sword",
 	"item.ferratinium.ferronyx_axe": "Ferronyx Axe",
 	"item.ferratinium.ferronyx_dagger": "Ferronyx Dagger",
 
+	"item.ferratinium.raw_platiniam": "Raw Platiniam",
+	"item.ferratinium.platiniam_ingot": "Platiniam Ingot",
 	"item.ferratinium.platiniam_helmet": "Platiniam Helmet",
 	"item.ferratinium.platiniam_chestplate": "Platiniam Chestplate",
 	"item.ferratinium.platiniam_leggings": "Platiniam Leggings",
 	"item.ferratinium.platiniam_boots": "Platiniam Boots",
 
+	"item.ferratinium.crystallized_ferratinium_ingot": "Crystallized Ferratinium Ingot",
+	"item.ferratinium.ferratinium_sword": "Ferratinium Sword",
+	"item.ferratinium.ferratinium_axe": "Ferratinium Axe",
+	"item.ferratinium.ferratinium_dagger": "Ferratinium Dagger",
+	"item.ferratinium.ferratinium_helmet": "Ferratinium Helmet",
+	"item.ferratinium.ferratinium_chestplate": "Ferratinium Chestplate",
+	"item.ferratinium.ferratinium_leggings": "Ferratinium Leggings",
+	"item.ferratinium.ferratinium_boots": "Ferratinium Boots",
+
 	"block.ferratinium.ferronyx_ore": "Ferronyx Ore",
 	"block.ferratinium.deepslate_ferronyx_ore": "Deepslate Ferronyx Ore",
+	"block.ferratinium.platiniam_ore": "Platiniam Ore",
 	"block.ferratinium.deepslate_platiniam_ore": "Deepslate Platiniam Ore",
 	"block.ferratinium.ferronyx_block": "Ferronyx Block",
 	"block.ferratinium.ferronyx_stairs": "Ferronyx Stairs",
